Добавляет позиционирование элиментов на странице Студия

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,8 @@ header {
   border: 1px solid #ECECEC
 }
 
+
+
 /* Отменяет стили */
 .list {
   padding: 0;
@@ -40,6 +42,8 @@ header {
   padding-left: 15px;
   padding-right: 15px;  
 }
+
+
 
 /* Логотип */
 .logo {
@@ -63,6 +67,8 @@ header {
 .logo .footer {
   color: var(--primary-white-color);
 }
+
+
 
 /* Шапка */
 .container-header {
@@ -192,6 +198,8 @@ nav {
   background-image: url("../images/icon-smartphone.svg");
 } */
 
+
+
 /* Герой */
 .hero {
   max-width: 1600px;
@@ -230,6 +238,8 @@ nav {
   text-transform: uppercase;
 }
 
+
+
 /* Section */
 section {
   padding-top: 0px;
@@ -246,6 +256,8 @@ section {
   letter-spacing: 0.03em;
   text-align: center;
 }
+
+
 
 /* Секция Наши прeимущества */
 .feature {
@@ -378,18 +390,37 @@ section {
   margin-right: 0px;
 }
 
-.work .title {
-  bottom: 0px;
+.work-examples {
+  position: relative;
+  display: flex;  
+}
+
+.work-examples::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  bottom: 0%;
   left: 0%;
+  background: rgba(47, 48, 58, 0.8);
+  opacity: 1;
+}
+
+.work .title {
+  width: 370px;
   margin-top: 0px;
   margin-bottom: 0px;
-
+  position: absolute;
+  text-align: center;
+  bottom: 27px;
+  
   color: var(--primary-white-color);
-  /* background: rgba(47, 48, 58, 0.8); */
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14em;
 }
+
+
 
 /* Секция Наша команда */
 .team {
@@ -470,6 +501,8 @@ section {
   fill: var(--primary-white-color);
 }
 
+
+
 /* Секция Постоянные клиенты */
 .clients-list {
   display: flex;
@@ -502,6 +535,8 @@ section {
   border: 1px solid var(--accent-color);
   fill: var(--accent-color);
 }
+
+
 
 /* Секция Подвал */
 footer {
@@ -602,6 +637,7 @@ footer {
 }
 
 
+
 /* Button */
 .button {
   border: none;
@@ -642,6 +678,8 @@ footer {
   background-color: var(--accent-color);
   cursor: pointer;
 }
+
+
 
 /* Портфолио */
 
@@ -718,14 +756,14 @@ footer {
 }
 
 .examples-descriptions {
-  width: 322px;
-  margin-top: 0px;
-  margin-bottom: 0px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-    
+  width: 322px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+      
   color: var(--primary-white-color);
 
   font-size: 18px;
