--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,7 @@ nav {
 /* Уберает крайн. геометрию */
 .site-nav .item:not(:last-child) {
   margin-right: 50px;
+  position: relative;
 }
 
 .site-nav .link {
@@ -117,6 +118,18 @@ nav {
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
+}
+
+.current:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  bottom: 0px;
+  left: 0px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+  opacity: 1;
 }
 
 .contact-nav {
@@ -793,4 +806,36 @@ footer {
 
   font-size: 16px;
   line-height: 1.87em;
+}
+
+
+
+/* Модальное окно */
+
+.backdrop {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidde {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  padding: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-width: 528px;
+  min-height: 581px;
+
+  background-color: #FFFFFF;
+  border-radius: 4px;
 }
