--- a/css/styles.css
+++ b/css/styles.css
@@ -16,13 +16,15 @@ body {
 
 header {
   position: fixed;
-  width: 100%;
-  z-index: 1;
-  background-color: var(--primary-white-color);
   top: 0%;
   left: 50%;
   transform: translate(-50%, 0%);
-  border: 1px solid #ECECEC
+
+  width: 100%;
+  
+  background-color: var(--primary-white-color);
+  border: 1px solid #ECECEC;
+  z-index: 1;
 }
 
 
@@ -53,7 +55,7 @@ header {
 
   font-weight: 700;
   font-size: 26px;
-  line-height: 1.19;
+  line-height: 1.19em;
 
   text-decoration: none;
 }
@@ -91,8 +93,8 @@ nav {
 
 /* Уберает крайн. геометрию */
 .site-nav .item:not(:last-child) {
-  margin-right: 50px;
   position: relative;
+  margin-right: 50px;
 }
 
 .site-nav .link {
@@ -123,10 +125,12 @@ nav {
 .current:before {
   content: '';
   position: absolute;
-  width: 100%;
-  height: 4px;
   bottom: 0px;
   left: 0px;
+
+  width: 100%;
+  height: 4px;
+  
   border-radius: 2px;
   background-color: var(--accent-color);
   opacity: 1;
@@ -322,6 +326,7 @@ section {
 
 .visually-hidden {
   position: absolute;
+
   width: 1px;
   height: 1px;
   margin: -1px;
@@ -411,21 +416,24 @@ section {
 .work-examples::before {
   content: '';
   position: absolute;
-  width: 100%;
-  height: 70px;
   bottom: 0%;
   left: 0%;
+
+  width: 100%;
+  height: 70px;  
+
   background: rgba(47, 48, 58, 0.8);
   opacity: 1;
 }
 
 .work .title {
-  width: 370px;
-  margin-top: 0px;
-  margin-bottom: 0px;
   position: absolute;
   text-align: center;
   bottom: 27px;
+
+  width: 370px;
+  margin-top: 0px;
+  margin-bottom: 0px;  
   
   color: var(--primary-white-color);
   font-weight: 700;
@@ -773,6 +781,7 @@ footer {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
   width: 322px;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -816,18 +825,19 @@ footer {
   position: fixed;
   top: 0px;
   left: 0px;
+
   width: 100%;
   height: 100%;
+
   background: rgba(0, 0, 0, 0.2);
 }
 
-.backdrop.is-hidde {
+.backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
 
 .modal {
-  padding: 10px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -835,7 +845,77 @@ footer {
 
   min-width: 528px;
   min-height: 581px;
-
+  
   background-color: #FFFFFF;
   border-radius: 4px;
+}
+
+.modal-text {
+  color: var(--secondary-text-color);
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14em;
+  letter-spacing: 0.01em;
+}
+
+.modal-title {
+  text-align: center;
+
+  margin-top: 3px;
+  margin-bottom: 30px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;  
+}
+
+.modal-button {
+  position: relative;
+  display: flex;
+  margin-top: 7px;
+  margin-left: auto;
+  margin-right: 16px;
+
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid var(--primary-icon-color);
+  background-color: var(--primary-white-color);
+}
+
+.icon-close {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 11px;
+  height: 11px;
+  fill: #000000;
+}
+
+.modal-button:hover .icon-close {
+  fill: var(--accent-color);
+}
+
+.icon-background {
+  position: relative;
+  width: 448px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-radius: 4px;
+  border: 1px solid var(--primary-icon-color);
+
+}
+
+.icon-name {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  width: 11px;
+  height: 11px;
+  fill: #000000;
 }
