--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,8 @@ nav {
   letter-spacing: 0.02em;
 
   text-decoration: none;
+
+  transition: color 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Показывает текущую страницу сайта */
@@ -134,6 +136,8 @@ nav {
   border-radius: 2px;
   background-color: var(--accent-color);
   opacity: 1;
+
+
 }
 
 .contact-nav {
@@ -159,6 +163,8 @@ nav {
   letter-spacing: 0.02em;
 
   text-decoration: none;
+
+  transition: color 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-nav .link:hover,
@@ -178,15 +184,19 @@ nav {
   width: 18px;
   height: 14px;  
   margin-right: 10px;
+
+  transition: fill 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-smartphone {
   width: 11px;
   height: 16px;
   margin-right: 10px;
+
+ transition: fill 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
- /* вставляли иконки при помощи тега img */
+/* вставляли иконки при помощи тега img */
 /* .icon-gmail {
   display: inline-flex;
   width: 16px;
@@ -505,23 +515,29 @@ section {
   align-items: center;
   justify-content: center;
 
-  fill: var(--primary-icon-color);
   border-radius: 50%;
-  background-color: var(--primary-white-color)
+  background-color: var(--primary-white-color);
     
-}
-
-.background-networks .icon {
-  width: 20px;
-  height: 20px;
+  transition: background-color 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .background-networks:hover,
 .background-networks:focus {
   background-color: var(--accent-color);
-  fill: var(--primary-white-color);
 }
 
+.background-networks .icon {
+  width: 20px;
+  height: 20px;
+
+  fill: var(--primary-icon-color);
+
+  transition: fill 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.background-networks:hover .icon {
+  fill: var(--primary-white-color);
+}
 
 
 /* Секция Постоянные клиенты */
@@ -548,7 +564,10 @@ section {
   border: 1px solid var(--primary-icon-color);
 
   fill: var(--primary-icon-color);
-  background-color: var(--primary-white-color)
+  background-color: var(--primary-white-color);
+
+  transition: background-color 350ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .background-clients:hover,
@@ -632,14 +651,17 @@ footer {
   align-items: center;
   justify-content: center;
 
-  fill: var(--primary-white-color);
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
+
+  transition: background-color 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .background-networks-ft .icon {
   width: 20px;
   height: 20px;
+
+  fill: var(--primary-white-color);
 }
 
 .background-networks-ft:hover,
@@ -676,6 +698,9 @@ footer {
   font-size: 16px;
   line-height: 1.62em;
   text-align: center;
+
+  transition: background-color 350ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button.primary {
@@ -696,6 +721,7 @@ footer {
 .bar .button.secondery:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   cursor: pointer;
 }
 
@@ -724,6 +750,10 @@ footer {
   border: 1px solid #EEEEEE;
 }
 
+.examples .item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 /* Убирает крайн. геометрию у каждого третего */
 .examples .item:nth-child(3n) {
   margin-right: 0px;
@@ -747,32 +777,26 @@ footer {
   text-decoration: none;
 }
 
-.examples .item:hover,
-.examples .item:focus {
-  background: #FFFFFF;
-  border: 1px solid #EEEEEE;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.examples .item:hover .examples-descriptions {
-  opacity: 1;
-}
-
-.examples .item:hover .product:before {
-  opacity: 1;
-}
-
 .product {
-  position: relative;
+  position: relative; 
+
+  overflow: hidden;
 }
 
 .product:before {
   content: '';
   position: absolute;
+  transform: translateY(100%);
+
   width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
-  opacity: 0;
+    
+  transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.examples .item:hover .product::before {
+  transform: translateY(0%);
 }
 
 .examples-descriptions {
@@ -790,6 +814,13 @@ footer {
   font-size: 18px;
   line-height: 1.56em;
   opacity: 0;
+    
+  transition: opacity 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.examples .item:hover .examples-descriptions {
+  opacity: 1;
+  transition: opacity 350ms cubic-bezier(0.4, 0, 0.2, 1) 350ms;
 }
 
 .examples-title {
@@ -829,6 +860,8 @@ footer {
   height: 100%;
 
   background: rgba(0, 0, 0, 0.2);
+
+  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -836,17 +869,24 @@ footer {
   pointer-events: none;
 }
 
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.2);  /*при scale всегда нужно учитывать translate (-50%, -50%)
+  в противном случаи окно будет сесжать */
+}
+
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
 
   width: 528px;
   min-height: 581px;
   
   background-color: #FFFFFF;
   border-radius: 4px;
+
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-text {
